[CodeQL] Use Java 21 collection methods