@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -190,7 +190,7 @@ public class PerlCpanminusRunAnythingProvider extends RunAnythingProviderBase<Li
           break;
         }
         unknownCommands.addAll(0, lastItem.parameters);
-        commandModel.remove(commandModel.size() - 1);
+        commandModel.removeLast();
       }
       if (!unknownCommands.isEmpty()) {
         CommandElement implicitCommandElement = new CommandElement(myAllOptionsAndCommands.get(""));
