@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2023 Alexandr Evstigneev
+ * Copyright 2015-2024 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -115,7 +115,7 @@ public class PerlStringLanguageInjector extends PerlLiteralLanguageInjector {
       if (variables.size() != 1) {
         return null;
       }
-      variable = variables.get(0);
+      variable = variables.getFirst();
     }
     else if (variable instanceof PsiPerlScalarVariable scalarVariable) {
       PerlVariableDeclarationElement variableDeclarationElement = scalarVariable.getLexicalDeclaration();
